[tool.poetry]
name = "gptify"
version = "0.4.1"
description = "Convert code repos into an LLM prompt-friendly format. Forked from https://github.com/zackees/gptrepo"
authors = ["Wilder Lopes <wilder@ogre.run>"]
readme = "README.md"
include = ["gptify/.gptignore"]
homepage = "https://github.com/ogre-run/gptify"

[tool.poetry.dependencies]
python = ">=3.9"
pyperclip = "^1.8.2"
tiktoken = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gptify = "gptify.cli:main"
